--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -335,10 +335,33 @@
 	margin-left:10px;
 	cursor: pointer;
 }
-.nameFilter{
-	width:95%;
+.filter{
+	width:98%;
 	margin: 0 auto;
 }
 .image-version li{
 	float:left;
+	margin-left:15px;
+	width:23%;
+	display:block;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+.image-version li span{
+	margin-left:5px;
+}
+.caret-filter{
+	transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-webkit-transform: rotate(-90deg);
+}
+.caret-filter-down{
+	transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-webkit-transform: rotate(-90deg);
 }
