镜像批量删除

--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -365,3 +365,9 @@
 	-moz-transform: rotate(-90deg);
 	-webkit-transform: rotate(-90deg);
 }
+.imageName span{
+	margin-left:15px;
+}
+.timeVersion{
+	margin-left:18px!important;
+}
