--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -365,7 +365,16 @@ td .dockerfileinput {
     width: 40%;
     height: 50px;
 }
-
+.event-stop {
+    width: 30px;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    float: right;
+    margin-top: 7px;
+    margin-left: 1px;
+    cursor: pointer;
+}
 .event-sign {
     width: 50px;
     display: inline-block;
