镜像批量删除数据联调

--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -343,6 +343,7 @@
 	float:left;
 	margin-left:15px;
 	width:23%;
+	line-height: 30px;
 	display:block;
     white-space:nowrap;
     overflow:hidden;
