--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -1046,3 +1046,15 @@ li.line-h-3 span i{
 	font-size: 16px;
     color: #337ab7;
 }
+/* debug */
+.docInfo, .cmdInfo, .exportInfo{
+	width:98%;
+	margin: 0 auto;
+}
+.exportInfo{
+	background-color: #fff;
+    min-height: 200px;
+    padding-top: 20px;
+}
+
+
