服务界面样式修改

--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -1114,6 +1114,9 @@ p.portLabel span{
 	line-height:34px;
 	float:left;
 }
-p.portLabel input,select{
-	width:75%!important;
+p.portLabel input{
+	width:75%;
+}
+#protocol{
+	width:75%;
 }
