--- a/src/main/resources/static/css/core/layout.css
+++ b/src/main/resources/static/css/core/layout.css
@@ -14,6 +14,7 @@
 
 .navbar .navbar-header h2 {
     font-weight: 700;
+    color:#e14344;
 }
 
 .navbar .navbar-info {
@@ -113,13 +114,13 @@
 }
 
 .page-sidebar .nav-menu > .item-click {
-    background-color: #3c81e0;
+    background-color: #e14344;
 }
 
 .page-sidebar .nav-menu > li > .nav-item-hover > li > a {
     display: block;
     height: 40px;
-    background: #4e8fde;
+    background: #e86a6a;
     color: #eee;
     opacity: 0.9;
     line-height: 40px;
