--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -611,7 +611,7 @@ textarea.c-project-con{
     border-top: 4px solid #dadada;
 }
 .tab-title.active{
-	border-top: 4px solid #3c7bca;
+	border-top: 4px solid #e14344;
 }
 .tab-title h5{
     font-size: 15px;
