--- a/src/main/resources/static/css/core/layout.css
+++ b/src/main/resources/static/css/core/layout.css
@@ -194,9 +194,10 @@
 .sign-container {
     display: block;
     margin: 0 auto;
-    padding-top: 40px;
+    margin-top: 190px;
     width: 380px;
-    border-radius: 2px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 10px #dadada;
 }
 
 .sign-form {
@@ -216,4 +217,14 @@
 }
 a i.fa-home{
 	color: #e14344;
+}
+/*new */
+.sign-title{
+	background-color: #fff;
+    height: 54px;
+    border-bottom: 1px solid #dadada;
+    text-align: center;
+}
+.sign-title h3{
+	line-height: 54px;
 }
