--- a/src/main/resources/static/css/mod/template.css
+++ b/src/main/resources/static/css/mod/template.css
@@ -604,7 +604,7 @@ span.i {
     background: #3D8DDB;
     margin-right: 15px;
 }
-/* ╢╢╫╗╩Ы╠╬пео╒ */
+/* О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫о╒ */
 .modalCrealApp {
     background: #fff;
     min-height: 100%;
@@ -635,10 +635,6 @@ span.i {
     width: 50%;
     float: left;
     border-bottom: 2px solid #e2e2e4;
-}
-
-.modalCrealApp .steps-main .progre .radius_step.action {
-    border-bottom: 2px solid #418ac7;
 }
 
 .radius_step {
@@ -721,7 +717,7 @@ span.i {
     height: 50px;
     line-height: 35px;
 }
-/* ╩╥╬Ё╠Да© */
+/* О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ */
 .hide-set {
     margin: 0 auto;
     clear: both;
