--- a/src/main/resources/static/css/mod/home.css
+++ b/src/main/resources/static/css/mod/home.css
@@ -56,7 +56,7 @@
     margin-top: 50px;
 }
 .span-active{
-	background-color: #e14344;
+	background-color: #e8504f;
 	color:#fff;
 }
 .tabBtn{
@@ -83,4 +83,57 @@
     top: 20px;
     right: 26px;
 }
+.app-list > li {
+    float: left;
+    width: 20%;
+}
+.app-list .icon-view {
+    display: block;
+    box-sizing: border-box;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    width: 100%;
+}
+.app-list .icon-view .icon-wrapper {
+    background-color: rgba(255,255,255,.2);
+    border-radius: 25px;
+    box-shadow: 0 5px 20px rgba(0,0,0,.1);
+}
+.app-list .icon-view .icon-wrapper .icon-img {
+    height: 100px;
+    width: 100%;
+    display: table;
+}
+.app-list .icon-view .icon-wrapper .icon-img span {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.app-list .icon-view .icon-wrapper .icon-img img {
+    display: inline-block;
+    height: 85px;
+    width: 85px;
+}
+.app-list .icon-view .icon-name {
+    padding: 18px 5px;
+    border-top: 1px solid rgba(0,0,0,.055);
+    border-radius: 0 0 25px 25px;
+    background-color: rgba(0,0,0,.1);
+    /* color: rgba(255,255,255,.85); */
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-shadow: 0 7px 15px rgba(0,0,0,.25);
+}
+.funs-list{
+	width: 88%;
+	margin: 0 auto;
+}
+
+
 
