--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -537,3 +537,12 @@ table.dataTable thead .sorting:after {
 .li-active{
 	background-color:#dadada;
 }
+.fa-circle{
+	font-size: 10px;
+    margin-left: 4px;
+    margin-right: 8px;
+}
+.fa-tachometer{
+	padding-right: 2px;
+    padding-left: 2px;
+}
