--- a/src/main/resources/static/css/mod/bcm-menu.css
+++ b/src/main/resources/static/css/mod/bcm-menu.css
@@ -56,6 +56,31 @@ nav.navbar-default{
 .tit-image{
 	width: 18px;
 }
+.helpDoc{
+	position: absolute;
+	width: 100%;
+	bottom: 110px;
+	font-size: 12px;
+	z-index: 222;
+	text-align: center;
+	height: 40px;
+}
+.helpDoc input{
+	background-color: #fff;
+    color: #e8504f;
+    font-weight: bolder;
+    outline:none;
+}
+.helpDoc input:hover{
+	border-color: #e8504f;
+	outline:none;
+}
+.helpDoc input:visited{
+	border-color: #e8504f;
+	outline:none;
+}
+	
+
 
 
 
