--- a/src/main/resources/static/css/mod/home.css
+++ b/src/main/resources/static/css/mod/home.css
@@ -56,7 +56,7 @@
     margin-top: 50px;
 }
 .span-active{
-	background-color: #e8504f;
+	/* background-color: #e8504f; */
 	color:#fff;
 }
 .tabBtn{
