--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -94,7 +94,7 @@
 
 .radius_step.action span {
     /* background: #418ac7; */
-    background: #e8504f;
+    /* background: #e8504f; */
 }
 
 .step-inner {
