--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -136,10 +136,10 @@
     color: #fff;
 }
 
-.radius_step.action span {
+/* .radius_step.action span {
     background: #418ac7;
 }
-
+ */
 .step-inner {
     position: relative;
     left: 0;
