--- a/src/main/resources/static/css/core/color-blue.css
+++ b/src/main/resources/static/css/core/color-blue.css
@@ -71,6 +71,10 @@ a:hover{
 .tab-title.active{
 	border-top: 4px solid #3C7BCA;
 }
+.ci-body .ci-content-tabmain .active {
+    color: #4E8FDE;
+    border-top: 2px solid #4E8FDE;
+}
 /* help */
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a {
     color: #2e384a;
@@ -91,6 +95,15 @@ nav.navbar-default{
 }
 .img-circle{
 	border: 4px solid #245086;
+}
+.serDetail{
+	color:#3C7BCA!important;
+}
+.serDetail.btn-prim{
+	color:#fff!important;
+}
+.serDetail:hover{
+	color:#fff!important;
 }
 
 
