--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -71,6 +71,10 @@ a:hover{
 .tab-title.active{
 	border-top: 4px solid #e8504f;
 }
+.ci-body .ci-content-tabmain .active {
+    color: #e8504f;
+    border-top: 2px solid #e8504f;
+}
 /* help */
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a {
     color: #e8504f;
@@ -93,10 +97,13 @@ nav.navbar-default{
 	border: 4px solid #e66;
 }
 .serDetail{
-	color:#e8504f;
+	color:#e8504f!important;
+}
+.serDetail.btn-prim{
+	color:#fff!important;
 }
 .serDetail:hover{
-	color:#fff;
+	color:#fff!important;
 }
 
 
