--- a/src/main/resources/static/css/mod/home.css
+++ b/src/main/resources/static/css/mod/home.css
@@ -78,11 +78,7 @@
     color: #676a6a;
     margin-top: 12px;
 }
-.navbar-login{
-	position: absolute;
-    top: 20px;
-    right: 26px;
-}
+
 .app-list > li {
     float: left;
     width: 20%;
@@ -152,39 +148,35 @@
     font-size: 20px;
     cursor:pointer;
 }
-@media screen and (min-width: 320px) {
-.pandectBtn{top: 266px;}
-}
-@media screen and (min-width: 360px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 375px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 386px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 414px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 520px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 720px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 820px) {
-    .pandectBtn{top: 366px;}
-}
-@media screen and (min-width: 920px) {
-    .pandectBtn{top: 352px;}
-}
+
 .pandectBtn:hover{
     color: #fff;
 }
 .icon-home{
 	color:#fff!important;
 }
-
+/* 导航栏中的三个标签 */
+.navbar-tab{
+	position: absolute;
+    line-height:70px;
+    left: 50%;
+    margin-left: -195px;
+    font-size:20px;
+    
+}
+.navbar-tab ul {
+	
+	height:70px;
+}
+.navbar-tab ul li{
+	float:left;
+	margin-right:70px;
+	color:#e14344;
+	text-algin:center;
+}
+.navbar-tab ul li a.navTab{
+	color:#e8504f;
+	font-weight: bold;
+}
 
 
