--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -382,27 +382,10 @@
     font-size: 16px;
     color: #a2a2a2;
 }
-/* 导航栏中的三个标签 */
-.navbar-tab{
-	position: absolute;
-    line-height:70px;
-    left: 50%;
-    margin-left: -195px;
-    font-size:20px;
-    
-}
-.navbar-tab ul {
-	
-	height:70px;
-}
-.navbar-tab ul li{
-	float:left;
-	margin-right:70px;
-	color:#e14344;
-	text-algin:center;
-}
-.navbar-tab ul li a.navTab{
-	color:#e8504f;
-	font-weight: bold;
+.imageText{
+	text-align: center;
+	font-size: 20px;
+	color: #a2a2a2;
+	margin-bottom:20px;
 }
 
