--- a/src/main/resources/static/css/core/color-blue.css
+++ b/src/main/resources/static/css/core/color-blue.css
@@ -129,11 +129,17 @@ nav.navbar-default{
 
 .btn-pull-deploy {
     border: 1px solid #4e8fde;
+    color: #4e8fde;
 }
 
 .btn-pull-deploy:hover {
     background: #4e8fde;
 }
+/* 镜像中心 */
+.images-panel .select-img .star-style {
+	color: #4e8fde!important;
+}
+
 
 
 
