--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -136,12 +136,16 @@ nav.navbar-default{
 
 .btn-pull-deploy {
     border: 1px solid #e8504f;
+    color: #e8504f;
 }
 
 .btn-pull-deploy:hover {
     background: #e8504f;
 }
-
+/* 镜像中心 */
+.images-panel .select-img .star-style {
+	color: #e8504f!important;
+}
 
 
 
