--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -374,10 +374,9 @@
 	margin-left:18px!important;
 }
 .imageInfo{
-	
     margin-left: 20px;
     margin-bottom: 10px;
-    border-left: 3px solid #e14344;
+    /* border-left: 3px solid #e14344; */
     line-height: 32px;
     padding-left: 10px;
     font-size: 16px;
