--- a/src/main/resources/static/css/core/color-blue.css
+++ b/src/main/resources/static/css/core/color-blue.css
@@ -1,6 +1,6 @@
 /* 蓝色 #3C7BCA 红色 #e8504f 背景circle蓝 #418ac7 #2e384a */
 .modalCrealApp .steps-main .progre .radius_step.action {
-    border-bottom: 2px solid #2e384a;
+    border-bottom: 2px solid #4e8fde;
     color: #2e384a;
 }
 .btn-prim {
@@ -91,7 +91,7 @@ a:hover{
 }
 /* home */
 .span-active{
-	background-color: #2e384a;
+	background-color: #3C7BCA;
 }
 nav.navbar-default{
 	background-color:#2e384a;
@@ -116,13 +116,15 @@ nav.navbar-default{
 	color:#fff!important;
 }
 /* 按钮 */
-.btn-primary {
-    background: #4E8FDE;
-    border-color: #4E8FDE;
+.btn-color {
+    background: #4E8FDE!important;
+    border-color: #4E8FDE!important;
+    color:#fff;
+    outline:none!important;
 }
 
-.btn-primary:hover,
-.btn-primary.focus {
+.btn-color:hover,
+.btn-color.focus {
     background: #3981da;
     border-color: #3981da;
 }
@@ -135,12 +137,27 @@ nav.navbar-default{
 .btn-pull-deploy:hover {
     background: #4e8fde;
 }
-/* 镜像中心 */
+/* 镜像 */
 .images-panel .select-img .star-style {
 	color: #4e8fde!important;
 }
+.star-favor{
+	color: #4e8fde;
+}
+.imageInfo{
+    border-left: 3px solid #4e8fde;
+}
 
-
+/* 导航栏中的三个标签 */
+.navbar-tab ul li{
+	color:#4e8fde;
+}
+.navbar-tab ul li a.navTab{
+	color:#4e8fde;
+}
+.navbar-tab li.active a{
+    border-bottom: 3px solid #4e8fde;
+}
 
 
 
