--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -14,6 +14,7 @@
     /* background: #e8504f; */
     background: #fff;
 }
+
 .navbar .navbar-header h1 {
     color:#e14344;
 }
@@ -127,6 +128,7 @@ nav.navbar-default{
 .btn-color.focus {
     background: #e66;
     border-color: #e66;
+    color: #fff;
 }
 
 .btn-defaults {
@@ -164,7 +166,9 @@ nav.navbar-default{
 .navbar-tab li.active a{
     border-bottom: 3px solid #e14344;
 }
-
+#login-header{
+	background: #e8504f;
+}
 
 
 
