--- a/src/main/resources/static/css/mod/bcm-menu.css
+++ b/src/main/resources/static/css/mod/bcm-menu.css
@@ -59,13 +59,13 @@ nav.navbar-default{
 	width: 18px;
 }
 .helpDoc{
-	position: absolute;
-	width: 100%;
-	bottom: 20px;
-	font-size: 12px;
-	z-index: 222;
-	text-align: center;
-	height: 40px;
+	position: fixed;
+    width: 200px;
+    bottom: 13px;
+    font-size: 12px;
+    z-index: 222;
+    text-align: center;
+    height: 40px;
 }
 .helpDoc input{
 	background-color: #fff;
@@ -119,6 +119,81 @@ nav.navbar-default{
     margin-right: 10px;
     margin-left: 7px;
 }
+.nav-title{
+	width:200px; 
+	position:fixed;
+	background-color: #e8504f;
+	z-index:1000;
+}
+#nav-side{
+	height:100%; 
+	overflow-y:auto;
+	/* height: calc(100% - 70px);  */
+   
+    overflow-x: hidden;
+}
+/*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
+#nav-side::-webkit-scrollbar{
+    width: 6px;
+    /* height: 16px; */
+    border-radius: 10px;
+    background-color: #e66;
+}
+/*定义滚动条的轨道，内阴影及圆角*/
+#nav-side::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    border-radius: 10px;
+    background-color: #e66;
+}
+/*定义滑块，内阴影及圆角*/
+#nav-side::-webkit-scrollbar-thumb{
+    /*width: 10px;*/
+    /* height: 20px; */
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #f5f5f5;
+}
+
+/* 收起左侧导航栏的按钮 */
+.sideBoxBtn{
+	z-index: 222;
+    position: absolute;
+    top: calc(100% - 50px);
+    left: 185px;
+    width: 15px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+}
+.sideBoxBtn i.fa{
+	z-index: 10;
+    position: absolute;
+    top: 10px;
+    left: 4px;
+    color:#e8504f;
+    font-size:12px;
+}
+.sideBoxBtn .btn-background{
+	z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
+    border-top: 7px solid transparent;
+    border-right: 15px solid #f7c1c1;
+    border-bottom: 7px solid transparent;
+}
+nav.navbar-downSide{
+    width: 15px;
+    position: fixed;
+    left: 0;
+    z-index: 95;
+    min-height: 100%;
+    box-shadow: 1px 1px 15px rgba(0,0,0,0.45);
+    background-color: #e8504f;
+}
+
 	
 
 
