*:修改和完善构建模块

--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -720,3 +720,7 @@ td.autocut{
 	font-size:19px;
 	color:#3c7bca;
 }
+.cursor-no-drop i.fa-arrow-circle-right{
+    cursor:no-drop;
+    color:#333;
+}
