--- a/src/main/resources/static/css/core/color-red.css
+++ b/src/main/resources/static/css/core/color-red.css
@@ -14,7 +14,9 @@
     /* background: #e8504f; */
     background: #fff;
 }
-
+.nav-header{
+	background-color: #e8504f;
+}
 .navbar .navbar-header h1 {
     color:#e14344;
 }
@@ -104,6 +106,9 @@ nav.navbar-default{
 .nav-bcm{
 	background-color: #e14344;
 }
+.nav-footer{
+	background-color: #e8504f; 
+}
 .img-circle{
 	border: 4px solid #e66;
 }
@@ -169,6 +174,15 @@ nav.navbar-default{
 #login-header{
 	background: #e8504f;
 }
-
+/* 收起左侧导航栏的按钮 */
+.sideBoxBtn i.fa{
+    color:#e8504f;
+}
+.sideBoxBtn .btn-background{
+    border-right: 15px solid #f7c1c1;
+}
+nav.navbar-downSide{
+    background-color: #e8504f;
+}
 
 
