--- a/src/main/resources/static/css/mod/bcm-menu.css
+++ b/src/main/resources/static/css/mod/bcm-menu.css
@@ -1,16 +1,23 @@
-
+.navAll {
+	position: fixed;
+    z-index: 95;
+    width: 200px;
+    min-height: 100%;
+    box-shadow: 1px 1px 15px rgba(0,0,0,0.45);
+}
 
 /* 侧边菜单栏 */
 nav.navbar-default{
 	width:200px;
 	position: fixed;
-    /* top: 70px; */
+    top: 160px;
     left: 0;
+    /* bottom: 60px; */
     z-index: 95;
-    min-height: 100%;
+    /* min-height: 100%; */
 	/* background-color:#fff; */
 	/* box-shadow: 1px 1px 10px #33414E; */
-	box-shadow: 1px 1px 15px rgba(0,0,0,0.45);
+	
 }
 .nav ul .nav-header{
 	padding-bottom: 20px;
@@ -61,11 +68,11 @@ nav.navbar-default{
 .helpDoc{
 	position: fixed;
     width: 200px;
-    bottom: 13px;
+    bottom: 0px;
     font-size: 12px;
-    z-index: 222;
+    z-index: 95;
     text-align: center;
-    height: 40px;
+    line-height: 76px;
 }
 .helpDoc input{
 	background-color: #fff;
@@ -85,6 +92,12 @@ nav.navbar-default{
 	text-align: center;
 	/* background-color: #e14344; */
 	margin-top:-20px;
+	height: 70px;
+}
+.nav-footer{
+	text-align: center;
+	/* background-color: #e8504f; */ 
+	/* margin-top:-20px; */
 	height: 70px;
 }
 .nav-bcm h2{
@@ -123,12 +136,12 @@ nav.navbar-default{
 	width:200px; 
 	position:fixed;
 	background-color: #e8504f;
-	z-index:1000;
+	z-index:95;
 }
 #nav-side{
-	height:100%; 
-	overflow-y:auto;
-	/* height: calc(100% - 70px);  */
+	/* height:100%; */ 
+	overflow-y: auto;
+	height: calc(100% - 230px);
    
     overflow-x: hidden;
 }
@@ -153,11 +166,32 @@ nav.navbar-default{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #f5f5f5;
 }
+/* huohu */
+#nav-side::-mox-scrollbar{
+    width: 6px;
+    /* height: 16px; */
+    border-radius: 10px;
+    background-color: #e66;
+}
+/*定义滚动条的轨道，内阴影及圆角*/
+#nav-side::-mox-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    border-radius: 10px;
+    background-color: #e66;
+}
+/*定义滑块，内阴影及圆角*/
+#nav-side::-mox-scrollbar-thumb{
+    /*width: 10px;*/
+    /* height: 20px; */
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #f5f5f5;
+}
 
 /* 收起左侧导航栏的按钮 */
 .sideBoxBtn{
 	z-index: 222;
-    position: absolute;
+    position: fixed;
     top: calc(100% - 50px);
     left: 185px;
     width: 15px;
@@ -171,7 +205,7 @@ nav.navbar-default{
     position: absolute;
     top: 10px;
     left: 4px;
-    color:#e8504f;
+    /* color:#e8504f; */
     font-size:12px;
 }
 .sideBoxBtn .btn-background{
@@ -181,7 +215,7 @@ nav.navbar-default{
     left: 0;
     height: 30px;
     border-top: 7px solid transparent;
-    border-right: 15px solid #f7c1c1;
+    /* border-right: 15px solid #f7c1c1; */
     border-bottom: 7px solid transparent;
 }
 nav.navbar-downSide{
@@ -191,7 +225,7 @@ nav.navbar-downSide{
     z-index: 95;
     min-height: 100%;
     box-shadow: 1px 1px 15px rgba(0,0,0,0.45);
-    background-color: #e8504f;
+    /* background-color: #e8504f; */
 }
 
 	
