--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -641,13 +641,14 @@ textarea.c-project-con{
 	margin-top: 12px;
 }
 .labelCred{
-	width: 20%;
+	width: 10%;
+	margin-left: 20px;
 	float: left;
 	line-height:34px;
 	
 }
 .conCred{
-	width: 76%;
+	width: 85%;
 }
 .c-project-checkbox{
 	height: 24px;
@@ -680,9 +681,9 @@ textarea.c-project-con{
     color: #3f8ec3;
     cursor: pointer;
     margin-top: -20px;
-    width: 76%;
+    width: 85%;
     float: right;
-    margin-right: 31px;
+    margin-right: 18px;
 }
 .jdkCon thead{
 	background: #E4EAEC;
